# e-foc

./: .gitignore  .gitmodules  .ls-lint.yml  .mega-linter.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  foc_simulator_qt.py  release-please-config.json  sonar-project.properties
core/platform_abstraction/: AdcPhaseCurrentMeasurement.hpp  CMakeLists.txt  CanBusAdapter.hpp  MotorFieldOrientedControllerAdapter.cpp  MotorFieldOrientedControllerAdapter.hpp  PlatformFactory.cpp  PlatformFactory.hpp  QuadratureEncoderDecorator.hpp  ResetCause.cpp  ResetCause.hpp
core/platform_abstraction/test/: CMakeLists.txt  TestResetCause.cpp
core/platform_abstraction/test_doubles/: AdcPhaseCurrentMeasurementMock.hpp  CMakeLists.txt  CanBusAdapterMock.hpp  PlatformFactoryMock.hpp  QuadratureEncoderDecoratorMock.hpp  SynchronousThreeChannelsPwmMock.hpp  ThreeChannelsPwmMock.hpp
core/services/electrical_system_ident/: CMakeLists.txt  ElectricalParametersIdentification.hpp  ElectricalParametersIdentificationImpl.cpp  ElectricalParametersIdentificationImpl.hpp  RealTimeResistanceAndInductanceEstimator.cpp  RealTimeResistanceAndInductanceEstimator.hpp  TerminalElectricalParametersIdentification.cpp  TerminalElectricalParametersIdentification.hpp
core/services/mechanical_system_ident/: CMakeLists.txt  FrictionAndInertiaEstimator.hpp  MechanicalParametersIdentification.hpp  MechanicalParametersIdentificationImpl.cpp  MechanicalParametersIdentificationImpl.hpp  RealTimeFrictionAndInertiaEstimator.cpp  RealTimeFrictionAndInertiaEstimator.hpp  TerminalMechanicalParametersIdentification.cpp  TerminalMechanicalParametersIdentification.hpp
core/state_machine/: BoardProtectionFaultNotifier.cpp  BoardProtectionFaultNotifier.hpp  CMakeLists.txt  ControlMode.hpp  ControlModeStateMachine.cpp  ControlModeStateMachine.hpp  FaultNotifier.hpp  FocMotorCanBridge.cpp  FocMotorCanBridge.hpp  FocStateMachine.hpp  FocStateMachineCommon.cpp  FocStateMachineCommon.hpp  FocStateMachineImpl.cpp  FocStateMachineImpl.hpp  OuterLoopStateMachine.cpp  OuterLoopStateMachine.hpp  PositionStateMachine.cpp  PositionStateMachine.hpp  SpeedStateMachine.cpp  SpeedStateMachine.hpp  TorqueStateMachine.cpp  TorqueStateMachine.hpp  TransitionPolicies.hpp
core/state_machine/test/: CMakeLists.txt  TestBoardProtectionFaultNotifier.cpp  TestControlMode.cpp  TestControlModeStateMachine.cpp  TestFaultNotifier.cpp  TestFocMotorCanBridge.cpp  TestFocStateMachine.cpp  TestFocStateMachineHelper.hpp  TestFocStateMachinePosition.cpp  TestFocStateMachineSpeed.cpp  TestFocStateMachineTorque.cpp
core/state_machine/test_doubles/: CMakeLists.txt  FaultNotifierMock.hpp
integration_tests/hardware_in_the_loop/main/: CMakeLists.txt  Main.cpp
integration_tests/hardware_in_the_loop/steps/: AdcSteps.cpp  CMakeLists.txt  CanSteps.cpp  CommonSteps.cpp  EepromSteps.cpp  EncoderSteps.cpp  FocCycleBudgetSteps.cpp  HardfaultRecoverySteps.cpp  PwmSteps.cpp  ResetCauseSteps.cpp  UartSteps.cpp
integration_tests/hardware_in_the_loop/support/: BridgeConfig.cpp  BridgeConfig.hpp  BridgeSession.cpp  BridgeSession.hpp  CMakeLists.txt  GdbFlasher.cpp  GdbFlasher.hpp  HilFixture.cpp  HilFixture.hpp  JLinkFlasher.cpp  JLinkFlasher.hpp  SerialLogger.cpp  SerialLogger.hpp  Timeouts.hpp  TypingTransmitter.cpp  TypingTransmitter.hpp
integration_tests/sil/steps/: CMakeLists.txt  CalibrationSteps.cpp  CanSteps.cpp  StateMachineSteps.cpp
integration_tests/software_in_the_loop/main/: CMakeLists.txt
integration_tests/software_in_the_loop/support/: CMakeLists.txt  ControlModeCoordinationFixture.cpp  ControlModeCoordinationFixture.hpp  EepromStub.cpp  EepromStub.hpp  FocIntegrationFixture.cpp  FocIntegrationFixture.hpp  FocMotorStateMachineBridge.cpp  FocMotorStateMachineBridge.hpp  PlatformFactoryMock.hpp  PositionIntegrationFixture.cpp  PositionIntegrationFixture.hpp  SpeedIntegrationFixture.cpp  SpeedIntegrationFixture.hpp  StateMachineAccessor.hpp
integration_tests/support/: CMakeLists.txt  EepromStub.cpp  FocIntegrationFixture.cpp  FocIntegrationFixture.hpp  FocMotorStateMachineBridge.cpp
source/foc/implementations/: CMakeLists.txt  ControllerBaseImpl.cpp  FocHelpers.hpp  FocPositionImpl.cpp  FocPositionImpl.hpp  FocSpeedImpl.cpp  FocSpeedImpl.hpp  FocTorqueImpl.cpp  FocTorqueImpl.hpp  FocWithSpeedLoop.hpp  FocWithSpeedPidAndRealTimeTune.cpp  FocWithSpeedPidAndRealTimeTune.hpp  FocWithSpeedPidImpl.cpp  FocWithSpeedPidImpl.hpp  LowPriorityInterruptImpl.hpp  RealTimeFrictionAndInertiaEstimator.cpp  RealTimeFrictionAndInertiaEstimator.hpp  RealTimeSpeedPidTune.hpp  Runner.cpp  Runner.hpp  TorqueControllerWithAutomaticPidGains.cpp  TorqueControllerWithAutomaticPidGains.hpp  TransformsClarkePark.cpp  TrigonometricImpl.cpp  WithAutomaticCurrentPidGains.cpp  WithAutomaticCurrentPidGains.hpp  WithRealTimeSpeedPidTune.cpp  WithRealTimeSpeedPidTune.hpp
source/services/NonVolatileMemory/: CMakeLists.txt  CalibrationData.hpp  ConfigData.hpp  NonVolatileMemory.hpp  NonVolatileMemoryImpl.cpp  NonVolatileMemoryImpl.hpp  NvmFlashRegion.cpp  NvmFlashRegion.hpp  NvmRegion.hpp
source/services/can_protocol/: CMakeLists.txt  CanCategoryHandler.cpp  CanCategoryHandler.hpp  CanCategoryHandlers.cpp  CanCategoryHandlers.hpp  CanFrameCodec.cpp  CanProtocolDefinitions.hpp  CanProtocolHandler.hpp  CanProtocolHandlerImpl.cpp  CanProtocolHandlerImpl.hpp  CanProtocolHandlerObserver.hpp
source/services/electrical_system_ident/: CMakeLists.txt  ElectricalParametersIdentificationImpl.cpp  ElectricalParametersIdentificationImpl.hpp  TerminalElectricalParametersIdentification.cpp  TerminalElectricalParametersIdentification.hpp
source/services/parameter_identification/: CMakeLists.txt  ElectricalParametersIdentification.hpp  ElectricalParametersIdentificationImpl.cpp  ElectricalParametersIdentificationImpl.hpp  MechanicalParametersIdentification.hpp  MechanicalParametersIdentificationImpl.cpp  MechanicalParametersIdentificationImpl.hpp  TerminalElectricalParametersIdentification.cpp  (+3 more)
targets/: CMakeLists.txt
tools/simulator/: CMakeLists.txt
(+722 files in other folders)
